# ratemypoliticians.github.io

./: .gitignore  .nojekyll  README.md  account.html  cypress.config.js  index.html  login.html  package-lock.json  package.json  pyproject.toml  requirements.txt  styles.css  webpack.config.js
js/: SearchablePoliticianList.jsx  ratemypoliticians.jsx
rmp441/: __init__.py  config.py  index.html  login.html
rmp441/js/: Account.jsx  Login.jsx  Ratings.jsx  SearchablePoliticianList.jsx  main.jsx  page.jsx  post.jsx  ratemypoliticians.jsx
rmp441/static/css/: style.css
rmp441/static/js/: bundle.js  bundle.js.map
rmp441/templates/: account.html  index.html  login.html  ratings.html
rmp441/views/: __init__.py  index.py  ratings.py  uploads.py
sql/uploads/: tmp.txt
static/js/: bundle.js.LICENSE.txt
templates/: account.html  ratings.html
views/: ratings.py  uploads.py
